# discordctl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  claude.yml  format-check.yml  lint-test.yml  release.yml
docs/: SETUP.md  SMOKE.md
scripts/: invite_url.py
src/claude_control/: __main__.py  config.py  schemas.py
src/claude_control/cli/: dctl.py
src/claude_control/daemon/: bot.py  server.py
src/claude_control/ops/: audit.py  lookup.py  registry.py  serialize.py
src/discordctl/: __main__.py
src/discordctl/cli/: dctl.py
src/discordctl/daemon/: bot.py  server.py
src/discordctl/ops/: lookup.py  message_build.py  registry.py  serialize.py
tests/: conftest.py  test_audit.py  test_bot_entry.py  test_cli.py  test_config.py  test_invite_url.py  test_lookup.py  test_registry.py  test_scaffold.py  test_schemas.py  test_serialize.py  test_server.py
tests/handlers/: test_automod.py  test_bot.py  test_bot_presence.py  test_category.py  test_channel.py  test_channel_settings.py  test_emoji_invite_webhook.py  test_emoji_ops.py  test_guild.py  test_guild_bans_prune.py  test_guild_community.py  test_guild_settings.py  test_guild_state.py  test_handlers_smoke.py  test_invite_ops.py  test_member.py  test_message.py  test_message_ops.py  test_message_rich.py  test_permissions.py  test_role.py  test_scheduled_event.py  test_soundboard.py  test_stage.py  test_sticker.py  test_template.py  test_thread.py  test_thread_ops.py  test_user.py  test_voice.py  test_webhook_ops.py
(+34 files in other folders)
